--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="container">
     <div class="game-container">
     <div class="score-board">
-      <img src="/images/logo.svg" alt="logo icon">
+      <img src="images/logo.svg" alt="logo icon">
       <div class="score">
         <p class="scoreText">Score</p>
         <p class="scoreCount">0</p>
