Fixed some issues

--- a/index.html
+++ b/index.html
@@ -46,28 +46,18 @@
         <button class="play-again-btn">Play Again</button>
       </div>
       <div class="computer">
-        <p class="player-label">The House Picked</p>
+        <p class="player-label">Computer</p>
   
         <div id="computer">      
-          <!-- <img class="icon"  src="images/icon-paper.svg" alt="paper icon"> -->
-          </div>
+          
+        </div>
       </div>
     </div>
   </div>
   
  
 </main>
-<div class="rules">
-  <button>Rules</button>
-</div>
-<footer class="footer">
-  <div class="info">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href ="https://github.com/aakashrajput201">Aakash Rajput</a>.
-    
-  </div>
-</div>
-</footer>
+
 <script src="app.js"></script>
 </body>
 </html>
